tests/conformance/syntax/positive/precedence_product_arrow_valid.ditt
module Syntax.PrecedenceProductArrow where

postulate A : Cat
postulate B : Cat
postulate C : Cat
h : A * B -> C = \x. x
