tests/conformance/syntax/negative/precedence_product_arrow_invalid.ditt
module Syntax.PrecedenceProductArrowBad where

postulate A : Cat
postulate C : Cat
h : A * -> C = \x. x
